--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -270,7 +270,7 @@ else
                                 }
                                 else
                                 {
-                                    <input id="fech_ini" name="fech_ini" type="text" class="form-control fecha" value="@String.Format("{0:yyyy-MM-dd}",DateTime.Today)">
+                                    <input id="fech_ini" name="fech_ini" type="text" class="form-control fecha" value="@String.Format("{0:dd/MM/yyyy}",DateTime.Today)">
                                 }
                             </div>
                         </div>
