--- a/WebApplication4/WebApplication4/Views/Ventas/CarritoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/CarritoVentas.cshtml
@@ -131,4 +131,20 @@ else
 
         }
     }
+
+
+    function busqueda() {
+
+
+        $("#search").submit();
+    }
+
+
+
+
+    function busquedaAdv() {
+
+        $("#adv-search").submit();
+
+    }
 </script>
