--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-12">
                 <div class="panel panel-primary">
-                    <div id="titulo1" class="panel-heading"><strong>Eventos populares</strong></div>
+                    <div id="titulo1" class="panel-heading"><strong>Próximos eventos</strong></div>
 
                     <!--Aca iran los eventos en miniatura-->
                     <div class="panel-body">
@@ -99,8 +99,8 @@
 
                                             }
 
-                                            <div class="row"><strong>@evento.nombre</strong></div>
-                                            <div class="row"><strong>@fecha</strong></div>
+                                            <div class="suspensivos"><strong>@evento.nombre</strong></div>
+                                            <div class=""><strong>@fecha</strong></div>
                                         </div>
                                     </a>
                                     
