--- a/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Comentarios.cshtml
@@ -74,7 +74,7 @@
 
 
 <div class="row">
-    <div class="thumbnail wrapper-container">
+    <div class="con wrapper-container">
         <div id="comment-container"  class="container-fluid">
 
             <div class="list-block-header">
