--- a/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
@@ -32,12 +32,12 @@
     <!--PARTE IMPORTANTE-->
     <div class="col-md-8">
         <div class="form-group row">
-            <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="col-xs-6 col-sm-8 col-md-8">
                 <h4 class="pull-right">Mostrar solo:</h4>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6">
+            </div>            
+            <div class="col-xs-6 col-sm-4 col-md-4">
                 <form action="" class="" role="search">
-                    <select class="form-control" name="" id="comboBusq" onchange="busca2()">
+                    <select class="form-control" name="" id="comboBusq" onchange="busca2()" >
                         <option>Departamento</option>
                         <option value="0">Todos</option>
                         @foreach (var item in listaSearch)
@@ -49,7 +49,7 @@
                     </select>
                 </form>
             </div>
-        </div>
+        </div>        
         <div class="row">
             <div class="table-responsive">
                 <table id="mytable" class="table table-bordered table-hover">
@@ -61,7 +61,7 @@
                             <th class="col-md-2">Departamento</th>
                         </tr>
                     </thead>
-                    <tbody id="tbody" style="cursor:default">
+                    <tbody id="tbody" style="cursor:text">
                         @*se muestra la lista de puntos de venta*@
                         @foreach (var row in listaPunto)
                         {
