--- a/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
@@ -73,9 +73,9 @@
         <div class="modal-body">
             <form action="" class="">
                 <!--DECLARAMOS LOS TABS Y LA CANTIDAD DE PESTAÑAS QUE TENDRA -->
-                <ul class="nav nav-tabs">
+                <ul class="nav nav-tabs" id="myTab">
                     <li class="active"><a href="#xEntrada" id="ptot" data-toggle="tab">Total</a></li>
-                    <li><a href="#xTarjeta" id="ptot2" data-toggle="tab">Por Vendedor</a></li>
+                    <li><a href="#xTarjeta" id="ptot2" data-toggle="tab">Por Vendedor</a></liclass>
                     <li><a href="#xEvento" data-toggle="tab">Por Evento</a></li>
                     <li><a href="#xPunto" data-toggle="tab">Por Punto de Venta</a></li>
                 </ul>
@@ -83,31 +83,31 @@
                 <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÑA -->
                 <div class="tab-content">
                     <!--PRIMERA PESTAÑA-->
-                    <div class="tab-pane fade in active" id="xEntrada">                       
+                    <div class="tab-pane fade in active " id="xEntrada">
                         <div class="container">
                             <br />
-                            <center class="row form-inline ">                                
-                                    <div class="input-group">
-                                        <span class="input-group-addon">Desde:</span>
-                                        <input id="fd1" type="date" class="form-control">
-                                    </div>                                
-                                    <div class="input-group">
-                                        <span class="input-group-addon">Hasta:</span>
-                                        <input id="fh1" type="date" class="form-control">
-                                    </div>                                                             
+                            <center class="row form-inline ">
+                                <div class="input-group">
+                                    <span class="input-group-addon">Desde:</span>
+                                    <input id="fd1" type="date" class="form-control">
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-addon">Hasta:</span>
+                                    <input id="fh1" type="date" class="form-control">
+                                </div>
                             </center>
                             <br />
                             <center class="row form-group">
-                                
-                                    <button onclick="reporte1()" class="btn btn-primary" data-dismiss="modal" aria-hidden="true"><span class="fa fa-table fa-lg"></span> Generar Reporte</button>
-                                
-                                    @if (Session["ReporteVentasTotal"] != null)
-                                    {
-                                        <button id="btnExport1" class="btn btn-success btn-excel" data-dismiss="modal" aria-hidden="true"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel</button>
-                                    }
-                                
 
-                            </center>                                                        
+                                <button onclick="reporte1()" class="btn btn-primary" data-dismiss="modal" aria-hidden="true"><span class="fa fa-table fa-lg"></span> Generar Reporte</button>
+
+                                @if (Session["ReporteVentasTotal"] != null)
+                                    {
+                                <button id="btnExport1" class="btn btn-success btn-excel" data-dismiss="modal" aria-hidden="true"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel</button>
+                                    }
+
+
+                            </center>
                             <div id="dvData">
                                 <div class="row">
                                     <div class="col-md-12">
@@ -127,27 +127,27 @@
                                                         <th>DNI del Vendedor</th>
                                                         <th>Nombre del Vendedor</th>
                                                         <th>Punto de Venta</th>
-                                                        <th>Total Devuelto</th>
-                                                        <th>Total</th>
+                                                        <th>Total Devuelto (S/.)</th>
+                                                        <th>Total (S/.)</th>
                                                     </tr>
                                                 </thead>
 
                                                 <tbody id="tbody">
                                                     @foreach (var row in lev)
                                                     {
-                                                        <tr>
-                                                            <td>@row.fecha.ToString("dd/MM/yyyy")</td>
-                                                            <td style="text-align:center">@row.codigo</td>
-                                                            <td>@row.nombre</td>
-                                                            <td>@row.punto</td>
-                                                            <td class="numero">@row.devtotal</td>
-                                                            <td class="numero">@row.total</td>
-                                                        </tr>
+                                                    <tr>
+                                                        <td>@row.fecha.ToString("dd/MM/yyyy")</td>
+                                                        <td style="text-align:center">@row.codigo</td>
+                                                        <td>@row.nombre</td>
+                                                        <td>@row.punto</td>
+                                                        <td class="numero">@row.devtotal</td>
+                                                        <td class="numero">@row.total</td>
+                                                    </tr>
                                                     }
                                                 </tbody>
                                             </table>
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                                 <div class="row">
@@ -185,7 +185,7 @@
                                 <button onclick="reporte2()" class="btn btn-primary" data-dismiss="modal" aria-hidden="true"><span class="fa fa-table fa-lg"></span> Generar Reporte</button>
                                 @if (Session["ReporteVentasTotal2"] != null)
                                 {
-                                   <button id="btnExport2" class="btn btn-success btn-excel" data-dismiss="modal" aria-hidden="true"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel</button>
+                                <button id="btnExport2" class="btn btn-success btn-excel" data-dismiss="modal" aria-hidden="true"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel</button>
                                 }
                             </center>
                             <div id="dvData2">
@@ -194,26 +194,26 @@
                                         @if (Session["ReporteVentasTotal2"] != null)
                                         {
                                             DateTime di2 = (DateTime)Session["FechaRI2"];
-                                            DateTime df2 = (DateTime)Session["FechaRF2"];                                            
-                                            <center>
-                                                <h4>REPORTE DE VENTAS POR VENDEDOR: Del @di2.Date.ToString("dd/MM/yyyy") - @df2.Date.ToString("dd/MM/yyyy")</h4>
-                                            </center>
+                                            DateTime df2 = (DateTime)Session["FechaRF2"];
+                                        <center>
+                                            <h4>REPORTE DE VENTAS POR VENDEDOR: Del @di2.Date.ToString("dd/MM/yyyy") - @df2.Date.ToString("dd/MM/yyyy")</h4>
+                                        </center>
                                         }
                                         <div class="table-responsive">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
                                                     <tr>
-                                                        <th>Código Vendedor</th>
+                                                        <th>Codigo</th>
                                                         <th>Nombre Vendedor</th>
-                                                        <th>Total</th>
+                                                        <th>Total (S/.)</th>
                                                     </tr>
                                                 </thead>
 
                                                 <tbody id="tbody">
                                                     @foreach (var row in lev2)
                                                     {
-                                                        <tr>
-                                                            <td style="text-align:center">@row.codigo</td>
+                                                    <tr>
+                                                        <td style="text-align:center">@row.codigo</td>
                                                             <td>@row.nombre</td>
                                                             <td class="numero">@row.total</td>
                                                         </tr>
@@ -221,7 +221,7 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                                 <div class="row">
@@ -273,7 +273,7 @@
                                             <table class="table table-bordered table-hover" align="center">
                                                 <thead>
                                                     <tr>
-                                                        <th>Cód. evento</th>
+                                                        <th>Codigo</th>
                                                         <th>Nombre Evento</th>
                                                         <th>Organizador</th>
                                                         <th>Función</th>
@@ -285,7 +285,7 @@
                                                     @foreach (var row in lev3)
                                                     {
                                                         <tr>
-                                                            <td>@row.codigo</td>
+                                                            <td style="text-align:center">@row.codigo</td>
                                                             <td>@row.nombre</td>
                                                             <td>@row.organizador</td>
                                                             <td>@row.funcion</td>
@@ -346,12 +346,12 @@
                                         <table class="table table-bordered table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th>Código</th>
-                                                    <th>Nombre Punto de Venta</th>
+                                                    <th>Cod</th>
+                                                    <th>Punto de Venta</th>
                                                     <th>Dirección</th>
                                                     <th>Distrito</th>
                                                     <th>Provincia </th>
-                                                    <th>Total</th>
+                                                    <th>Total (S/.)</th>
                                                 </tr>
                                             </thead>                                            
                                             <tbody id="tbody">
@@ -401,11 +401,11 @@
                 data: {fd:fd,fh:fh},
                 success: function (data) {
                     alert(data);
-                    window.location.href = '/ReporteVentas/Index';
+                    window.location.href = '/ReporteVentas/Index#xPunto';
                 },
                 error: function (data) {
                     alert(data);
-                    window.location.href = '/ReporteVentas/Index';
+                    window.location.href = '/ReporteVentas/Index#xPunto';
                 }
             });
         } else {
@@ -413,11 +413,11 @@
                 url: "@Url.Action("LimpiaR1", "ReporteVentas")",
                 data: {},
             success: function () {
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xPunto';
             },
             error: function (data) {
                 alert(data);
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xPunto';
             }
         });
         }
@@ -431,7 +431,7 @@
                 data: { fd: fd, fh: fh },
                 success: function (data) {
                     alert(data);
-                    window.location.href = '/ReporteVentas/Index';
+                    window.location.href = '/ReporteVentas/Index#xTarjeta';
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -444,11 +444,11 @@
                 url: "@Url.Action("LimpiaR2", "ReporteVentas")",
                 data: {},
             success: function () {
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xTarjeta';
             },
             error: function (data) {
                 alert(data);
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xTarjeta';
             }
         });
     }
@@ -462,7 +462,7 @@
                 data: { fd: fd, fh: fh },
                 success: function (data) {
                     alert(data);
-                    window.location.href = '/ReporteVentas/Index';
+                    window.location.href = '/ReporteVentas/Index#xEvento';
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -475,11 +475,11 @@
                 url: "@Url.Action("LimpiaR3", "ReporteVentas")",
                 data: {},
             success: function () {
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xEvento';
             },
             error: function (data) {
                 alert(data);
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xEvento';
             }
         });
     }
@@ -493,7 +493,7 @@
                 data: { fd: fd, fh: fh },
                 success: function (data) {
                     alert(data);
-                    window.location.href = '/ReporteVentas/Index';
+                    window.location.href = '/ReporteVentas/Index#xPunto';
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -506,11 +506,11 @@
                 url: "@Url.Action("LimpiaR4", "ReporteVentas")",
                 data: {},
             success: function () {
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xPunto';
             },
             error: function (data) {
                 alert(data);
-                window.location.href = '/ReporteVentas/Index';
+                window.location.href = '/ReporteVentas/Index#xPunto';
             }
         });
     }
@@ -556,3 +556,23 @@
         });
     });
 </script>
+@section scripts{
+    
+    <script>
+        //esto es para que cuando se refresque la pagina se permanezca en la misma pestaña
+        $('#myTab a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+
+        // store the currently selected tab in the hash value
+        $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
+            var id = $(e.target).attr("href").substr(1);
+            window.location.hash = id;
+        });
+
+        // on load of the page: switch to the currently selected tab
+        var hash = window.location.hash;
+        $('#myTab a[href="' + hash + '"]').tab('show');
+    </script>
+    }
