--- a/WebApplication4/WebApplication4/Views/Politicas/Politicas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Politicas/Politicas.cshtml
@@ -27,7 +27,9 @@
     }
     p7 = (int)db.Politicas.Find(g).valor;
 }
-
+<style>
+    input{text-align:center}
+</style>
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
@@ -43,129 +45,118 @@
             <li><a href="#tardanza" data-toggle="tab">Asistencia</a></li>
         </ul>
 
-        <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÑA -->
+        <!--INTRODUCIMOS EL CONTENIDO QUE TENDRA CADA PESTAÑA -->
         <div class="tab-content">
-            <!--boton de salir arriba-->
-            <div class="row">
-                <div class="container">
-                    <br>
-                    @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
-                </div>
-            </div>
             <!--PRIMAERA PESTAÑA-->
-            <div class="tab-pane fade active in" id="dias">
+            <div class="tab-pane fade active in" id="dias"><br />
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <input type="radio" name="tipoRes" value="1"><label for="">Duración de reserva: </label>
+                    <div class="row form-group">
+                        <div class="radio col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <label><input type="radio" name="tipoRes" value="1">Duración de reserva: </label>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <div class="input-group">
                                 <input id="durR" type="number" class="form-control" aria-describedby="reserva">
                                 <span class="input-group-addon" id="reserva">días</span>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p1" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div> <br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <input type="radio" name="tipoRes" value="2"><label for="">Hora Limite de Reserva: </label>
+                    </div>
+                    <div class="row form-group">
+                        <div class="radio col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <label><input type="radio" name="tipoRes" value="2">Hora límite de reserva: </label>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <div class="input-group">
                                 <input id="hora" type="time" class="form-control" aria-describedby="reserva">
-                                <span class="input-group-addon" id="reserva">Hora</span>
+                                <span class="input-group-addon" id="reserva">horas</span>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@pl6" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div> <br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <label for="">Máximo de reservas/compras por evento:</label>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <p>Máximo de reservas/compras por evento:</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <input id="maxC" type="number" class="form-control">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p2" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <label for="">Monto mín para pago con tarjeta:</label>
-
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <p>Monto mínimo para pago con tarjeta:</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <div class="input-group">
                                 <span class="input-group-addon" id="min">S/.</span>
                                 <input id="monT" type="number" class="form-control" aria-describedby="min">
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p3" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <label for="">Cantida Maxima de Rango Asignacion de Turnos:</label>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <p>Cantidad máxima de rango asignación de turnos:</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <input id="rAsg" type="number" class="form-control">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p5" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <label for="">Numero Maximo de Empleados en Punto de Venta:</label>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <p>Numero máximo de empleados en punto de venta:</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <input id="mxE" type="number" class="form-control">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p7" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-5">
-                            <button type="button" onclick="registrar()" class="btn btn-primary">Registrar <span class="glyphicon glyphicon-ok"></span></button>
-                        </div>
-
+                    </div>
+                    <div class="form-group row">
+                        <center>
+                            <button type="button" onclick="registrar()" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> Registrar</button>
+                        </center>
                     </div>
                 </div>
             </div>
 
             <!--SEGUNDA PESTAÑA-->
-            <div class="tab-pane fade" id="tardanza">
+            <div class="tab-pane fade" id="tardanza"><br />
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-1">
-                            <label for="">Tolerancia tardanza:</label>
+                    <div class="row form-group">
+                        <div class="col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
+                            <p>Tolerancia tardanza:</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-sm-4 col-xs-4">
                             <div class="input-group">
                                 <input id="tol" type="number" class="form-control" aria-describedby="min">
                                 <span class="input-group-addon" id="min">minutos</span>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1 col-sm-4 col-xs-4">
                             <input type="text" value="@p4" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-5">
+                    </div>
+                    <div class="row form-group">
+                        <center>
                             <button type="button" onclick="registrar2()" class="btn btn-primary">Registrar <span class="glyphicon glyphicon-ok"></span></button>
-                        </div>
-
+                        </center>
                     </div>
                 </div>
             </div>
-
         </div>
     </form>
 </div>
