--- a/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
@@ -7,6 +7,9 @@
     ViewBag.Title = "Index";        
     Layout = "~/Views/Shared/_Layout.cshtml";    
 }
+<style>
+    td,th{text-align:center}
+</style>
 
 <div class="container-fluid">
     <div class="col-md-2">
@@ -52,8 +55,8 @@
         <div class="table-responsive col-md-offset-4 col-md-4">
             <table id="mytable" class="table table-bordered table-hover">
                 <thead>
-                    <tr class="thead">
-                        <th class="col-md-6">Fecha de Registro</th>
+                    <tr>
+                        <th class="col-md-6">Fecha de registro</th>
                         <th class="col-md-6">Valor</th>
                     </tr>
                 </thead>
