--- a/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
@@ -75,7 +75,7 @@
                 <!--DECLARAMOS LOS TABS Y LA CANTIDAD DE PESTAÑAS QUE TENDRA -->
                 <ul class="nav nav-tabs" id="myTab">
                     <li class="active"><a href="#xEntrada" id="ptot" data-toggle="tab">Total</a></li>
-                    <li><a href="#xTarjeta" id="ptot2" data-toggle="tab">Por Vendedor</a></liclass>
+                    <li><a href="#xTarjeta" id="ptot2" data-toggle="tab">Por Vendedor</a></li>
                     <li><a href="#xEvento" data-toggle="tab">Por Evento</a></li>
                     <li><a href="#xPunto" data-toggle="tab">Por Punto de Venta</a></li>
                 </ul>
@@ -401,7 +401,9 @@
                 data: {fd:fd,fh:fh},
                 success: function (data) {
                     alert(data);
+
                     window.location.href = '/ReporteVentas/Index#xEntrada';
+                    window.location.reload();
                 },
                 error: function (data) {
                     alert(data);
@@ -414,6 +416,7 @@
                 data: {},
             success: function () {
                 window.location.href = '/ReporteVentas/Index#xEntrada';
+                window.location.reload();
             },
             error: function (data) {
                 alert(data);
@@ -432,6 +435,7 @@
                 success: function (data) {
                     alert(data);
                     window.location.href = '/ReporteVentas/Index#xTarjeta';
+                    window.location.reload();
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -445,6 +449,7 @@
                 data: {},
             success: function () {
                 window.location.href = '/ReporteVentas/Index#xTarjeta';
+                window.location.reload();
             },
             error: function (data) {
                 alert(data);
@@ -463,6 +468,7 @@
                 success: function (data) {
                     alert(data);
                     window.location.href = '/ReporteVentas/Index#xEvento';
+                    window.location.reload();
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -476,6 +482,7 @@
                 data: {},
             success: function () {
                 window.location.href = '/ReporteVentas/Index#xEvento';
+                window.location.reload();
             },
             error: function (data) {
                 alert(data);
@@ -494,6 +501,7 @@
                 success: function (data) {
                     alert(data);
                     window.location.href = '/ReporteVentas/Index#xPunto';
+                    window.location.reload();
                     //alert("Eliminado");
                     //row.remove();
                 },
@@ -507,6 +515,7 @@
                 data: {},
             success: function () {
                 window.location.href = '/ReporteVentas/Index#xPunto';
+                window.location.reload();
             },
             error: function (data) {
                 alert(data);
